--- a/BasicUI2/app/src/main/AndroidManifest.xml
+++ b/BasicUI2/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.BasicUI2"
         tools:targetApi="31">
         <activity
-            android:name=".batList"
+            android:name=".PointsSummary"
+            android:exported="false" />
+        <activity
+            android:name=".BatteryCounter"
+            android:exported="false" />
+        <activity
+            android:name=".BatteryList"
             android:exported="false" />
         <activity
             android:name=".RLocation"
